--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,27 @@
-# Python Virtual Environment
-venv/
-__pycache__/
-
-# OS-specific Files
+# Operating System Files
 .DS_Store
+Thumbs.db
+Desktop.ini
 
-# Model Artifacts (CRITICAL)
-model_artifacts/
+# IDE and Editor Directories
+# These store user-specific settings and should not be shared.
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# Logs and Build Artifacts
+# Catch-all for any logs or build outputs at the root level.
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local Environment Variables
+# Crucial for security - never commit secret keys.
+.env
+.env.local
+.env.*.local
